# BepsilonTree

./: .gitignore  README.md  copy_to_file.sh  haldendb.sln  haldindb.sln
.github/workflows/: cmake-multi-platform.yml  msbuild.yml
libbtree/: BPlusStore.hpp  BPlusTree.hpp  BTree.cpp  BTree.h  BeTree.hpp  BeTreeDRAMStorage.hpp  BeTreeFileMapStorage.hpp  BeTreeFileStorage.hpp  BeTreeIStorage.hpp  BeTreeInternalNode.hpp  BeTreeLRUCache.hpp  BeTreeLeafNode.hpp  BeTreeMessage.hpp  BeTreeNVMStorage.hpp  BeTreeNode.hpp  CMakeLists.txt  CacheManager.cpp  CacheManager.h  DataNode.hpp  ErrorCodes.h  File1Storage.hpp  ICacheManager.h  INode.h  IndexNode.hpp  InternalNode.cpp  InternalNode.h  LRU1Cache.hpp  LeafNode.cpp  LeafNode.h  LocalDRAMCache.cpp  LocalDRAMCache.h  NVMRODataNode.hpp  NVMROIndexNode.hpp  Source.cpp  TypeId.h  TypeMarshaller.hpp  TypeUID.h  libbtree.vcxproj
libcache/: CMakeLists.txt  CacheErrorCodes.h  CacheObjectFatKey.cpp  CacheObjectFatKey.h  CacheObjectKey.cpp  CacheObjectKey.h  DRAMCacheObject.cpp  DRAMCacheObject.h  DRAMCacheObjectKey.cpp  DRAMCacheObjectKey.h  DRAMLRUCache.cpp  DRAMLRUCache.h  DRAMVolatileStorage.cpp  DRAMVolatileStorage.h  FileStorage.hpp  IBufferCacheObject.h  ICache.h  ICacheObject.h  ICacheObjectKey.h  IDRAMCacheObject.h  IFlushCallback.h  INVRAMCacheObject.h  LRUCache.hpp  LRUCacheObject.hpp  NVRAMCacheObject.cpp  NVRAMCacheObject.h  NVRAMCacheObjectKey.cpp  NVRAMCacheObjectKey.h  NVRAMDAXStorage.cpp  NVRAMDAXStorage.h  NVRAMLRUCache.cpp  NVRAMLRUCache.h  NVRAMObjectStorage.cpp  NVRAMObjectStorage.h  NVRAMVolatileStorage.cpp  NVRAMVolatileStorage.h  NoCache.cpp  NoCache.h  NoCache.hpp  NoCacheObject.hpp  (+12 more)
libglog/include/glog/: logging.h
libglog/lib/: glog.lib  glogd.lib
sandbox/: .gitignore  CMakeLists.txt  filestore.hdb  mybtree.cpp  mybtree.h  sandbox.cpp  sandbox.cpp.bak  sandbox.vcxproj
test_all/: .gitignore  BPlusStore_LRUCache_FileStorage_Suite_1.cpp  BPlusStore_LRUCache_FileStorage_Suite_2.cpp  BPlusStore_LRUCache_FileStorage_Suite_3.cpp  BPlusStore_LRUCache_VolatileStorage_Suite_1.cpp  BPlusStore_LRUCache_VolatileStorage_Suite_2.cpp  BPlusStore_LRUCache_VolatileStorage_Suite_3.cpp  BPlusStore_NoCache_Suite_1.cpp  BPlusStore_NoCache_Suite_2.cpp  BPlusStore_NoCache_Suite_3.cpp  BPlusTree_DRAMLRU_Suite_1.cpp  BPlusTree_DRAMLRU_Suite_2.cpp  BPlusTree_NVRAMLRU_Suite_1.cpp  BPlusTree_NoCache_Suite_1.cpp  BPlusTree_NoCache_Suite_2.cpp  BPlusTree_TestSuite1.cpp  BPlusTree_TestSuite2.cpp  CMakeLists.txt  main.cpp  test.cpp  test_all.vcxproj
